--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -3,6 +3,8 @@ name: Create and publish Docker image
 on:
   push:
     branches: ['main']
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 env:
   REGISTRY: ghcr.io
